fix: modify encounter documentation
